--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -194,10 +194,12 @@ body {
     height: 100%;
     transition: opacity .3s;
     opacity: 0;
+    pointer-events: none;
 }
 
 #overlay[data-status='show'] {
     opacity: 1;
+    pointer-events: all;
 }
 
 #id-bar {
